# launchpad-cli

./: .travis.yml  LICENSE  Makefile  README.rst  setup.cfg
launchpadcli/: auth.py  cli.py  ppa.py
tests/: test_comand_lpad_ppa_ls.py  test_login.py  test_nop.py  test_ppa.py
