
[metadata]
name = launchpad-cli
version = 0.1.6
description = CLI tools for Launchpad and PPA
long_description = file: README.rst, LICENSE
author = Norio Kimura
author_email = kimura@monad.tv
url = https://github.com/norioxkimura/launchpad-cli
license = MIT

[options]
packages = find:
zip_safe = False
install_requires =
    six
    launchpadlib
    click

[options.entry_points]
console_scripts =
    lpad = launchpadcli.cli:lpad

[options.extras_require]
dev =
    pytest
    tox

[tox:tox]
envlist = py27,py35

[testenv]
deps = pytest
commands =
    pytest

